Closed Bug 1555362 Opened 5 years ago Closed 5 years ago

"RefPtr.h:46:38: error: member access into incomplete type 'mozilla::a11y::DocAccessibleParent'" bustage with --disable-accessibility

Categories

(Core :: Disability Access APIs, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox69 --- fixed

People

(Reporter: RyanVM, Assigned: Jamie)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

INFO - In file included from obj-firefox/dom/ipc/Unified_cpp_dom_ipc0.cpp:2:
INFO - In file included from dom/ipc/BrowserBridgeChild.cpp:7:
INFO - In file included from obj-firefox/dist/include/mozilla/dom/BrowserBridgeChild.h:10:
INFO - In file included from obj-firefox/ipc/ipdl/_ipdlheaders/mozilla/dom/PBrowserBridgeChild.h:9:
INFO - In file included from obj-firefox/ipc/ipdl/_ipdlheaders/mozilla/dom/PBrowserBridge.h:11:
INFO - In file included from ipc/glue/IPCMessageUtils.h:11:
INFO - In file included from ipc/chromium/src/chrome/common/ipc_message_utils.h:20:
INFO - In file included from ipc/chromium/src/chrome/common/file_descriptor_set_posix.h:14:
INFO - In file included from obj-firefox/dist/include/nsISupportsImpl.h:13:
INFO - In file included from obj-firefox/dist/include/nsISupportsUtils.h:15:
ERROR - obj-firefox/dist/include/mozilla/RefPtr.h:46:38: error: member access into incomplete type 'mozilla::a11y::DocAccessibleParent'
INFO - static void Release(U* aPtr) { aPtr->Release(); }
INFO - ^
INFO - obj-firefox/dist/include/mozilla/RefPtr.h:363:62: note: in instantiation of member function 'mozilla::RefPtrTraits<mozilla::a11y::DocAccessibleParent>::Release' requested here
INFO - static void Release(U* aPtr) { mozilla::RefPtrTraits<U>::Release(aPtr); }
INFO - ^
INFO - obj-firefox/dist/include/mozilla/RefPtr.h:77:37: note: in instantiation of member function 'RefPtr<mozilla::a11y::DocAccessibleParent>::ConstRemovingRefPtrTraits<mozilla::a11y::DocAccessibleParent>::Release' requested here
INFO - ConstRemovingRefPtrTraits<T>::Release(mRawPtr);
INFO - ^
INFO - dom/ipc/BrowserBridgeParent.cpp:25:22: note: in instantiation of member function 'RefPtr<mozilla::a11y::DocAccessibleParent>::~RefPtr' requested here
INFO - BrowserBridgeParent::BrowserBridgeParent()
INFO - ^
INFO - obj-firefox/dist/include/mozilla/dom/BrowserBridgeParent.h:16:7: note: forward declaration of 'mozilla::a11y::DocAccessibleParent'
INFO - class DocAccessibleParent;
INFO - ^
INFO - 1 error generated.

Flags: needinfo?(jteh)

Ug. I don't really know why we still have an option to disable accessibility in our builds anyway, but I'll of course fix the bustage. :)

Assignee: nobody → jteh
Flags: needinfo?(jteh)
Priority: -- → P1
Pushed by jteh@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/372d9fd7dcc1
Fix build bustage with --disable-accessibility (introduced in bug 1543282). r=nika
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
Has Regression Range: --- → yes
Keywords: regression
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: