Bug 1555362: Fix build bustage with --disable-accessibility (introduced in bug 1543282). r=nika

Differential Revision: https://phabricator.services.mozilla.com/D33119